Update and rename  Razones-de-cambio-slides.html to Razones-de-cambio-slides.html

--- a/slides/Razones-de-cambio-slides.html
+++ b/slides/Razones-de-cambio-slides.html
@@ -11,12 +11,12 @@
 
 <title>1. Razones de cambio slides</title>
 
-<script src="base/require.js"></script>
-<script src="base/jquery.js"></script>
+<script src="slides/base/require.js"></script>
+<script src="slides/base/jquery.js"></script>
 
 <!-- General and theme style sheets -->
-<link rel="stylesheet" href="base/reveal.css">
-<link rel="stylesheet" href="base/simple.css" id="theme">
+<link rel="stylesheet" href="slides/base/reveal.css">
+<link rel="stylesheet" href="slides/base/simple.css" id="theme">
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
@@ -36,12 +36,12 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
 <!-- Loading the mathjax macro -->
 <!-- Load mathjax -->
-    <script src="base/latest.js"></script>
+    <script src="slides/base/latest.js"></script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config;executed=true">
     MathJax.Hub.Config({
         tex2jax: {
-            inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+            inlineMath: [ ['$','$'], ["\slides/base\(","\\)"] ],
             displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
             processEscapes: true,
             processEnvironments: true
@@ -58,7 +58,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
     <!-- End of mathjax configuration -->
 
 <!-- Get Font-awesome from cdn -->
-<link rel="stylesheet" href="base/font-awesome.css">
+<link rel="stylesheet" href="slides/base/font-awesome.css">
 
 <style type="text/css">
     /*!
@@ -13201,9 +13201,9 @@ a.anchor-link {
 </style>
 
 <!-- Custom stylesheet, it must be in the same directory as the html file -->
-<link rel="stylesheet" href="base/custom.html">
+<link rel="stylesheet" href="slides/base/custom.html">
 
-<script type="text/javascript" async="" src="base/MathJax.js"></script><script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0/lib/js/head.min.js" src="base/head.js"></script><script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0/js/reveal.js" src="base/reveal.js"></script><script type="text/javascript" src="base/notes.js"></script><style type="text/css">.MathJax_Hover_Frame {border-radius: .25em; -webkit-border-radius: .25em; -moz-border-radius: .25em; -khtml-border-radius: .25em; box-shadow: 0px 0px 15px #83A; -webkit-box-shadow: 0px 0px 15px #83A; -moz-box-shadow: 0px 0px 15px #83A; -khtml-box-shadow: 0px 0px 15px #83A; border: 1px solid #A6D ! important; display: inline-block; position: absolute}
+<script type="text/javascript" async="" src="slides/base/MathJax.js"></script><script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0/lib/js/head.min.js" src="slides/base/head.js"></script><script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0/js/reveal.js" src="slides/base/reveal.js"></script><script type="text/javascript" src="slides/base/notes.js"></script><style type="text/css">.MathJax_Hover_Frame {border-radius: .25em; -webkit-border-radius: .25em; -moz-border-radius: .25em; -khtml-border-radius: .25em; box-shadow: 0px 0px 15px #83A; -webkit-box-shadow: 0px 0px 15px #83A; -moz-box-shadow: 0px 0px 15px #83A; -khtml-box-shadow: 0px 0px 15px #83A; border: 1px solid #A6D ! important; display: inline-block; position: absolute}
 .MathJax_Menu_Button .MathJax_Hover_Arrow {position: absolute; cursor: pointer; display: inline-block; border: 2px solid #AAA; border-radius: 4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; -khtml-border-radius: 4px; font-family: 'Courier New',Courier; font-size: 9px; color: #F0F0F0}
 .MathJax_Menu_Button .MathJax_Hover_Arrow span {display: block; background-color: #AAA; border: 1px solid; border-radius: 3px; line-height: 0; padding: 4px}
 .MathJax_Hover_Arrow:hover {color: white!important; border: 2px solid #CCC!important}
@@ -13349,7 +13349,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <div style="background-color: #023324; "><p><br></p>
-    <img src="base/logo-uec.svg" alt="Universidad Externado" width="150" align="left">
+    <img src="slides/base/logo-uec.svg" alt="Universidad Externado" width="150" align="left">
          <h1 style="color: white;font-family:Lucida Sans Unicode, Lucida Grande, sans-serif" align="center">Razones de cambio     </h1> 
 <p><br></p>
 </div><p></p><p><br></p>
