--- a/slides/4. Funciones de dos Variables.slides.html
+++ b/slides/4. Funciones de dos Variables.slides.html
@@ -13324,7 +13324,7 @@ You should consider upgrading via the &#39;pip install --upgrade pip&#39; comman
 
 </div>
 </div>
-</div></section><section>
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -13454,7 +13454,7 @@ por lo tanto la gráfica de ésta desigualdad es:</p>
 
 </div>
 </div>
-</div><div class="fragment">
+</div></section></section><section><section>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[12]:</div>
@@ -13502,7 +13502,7 @@ por lo tanto la gráfica de ésta desigualdad es:</p>
 </div>
 </div>
 
-</div></div><div class="fragment">
+</div></section></section><section><section>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[18]:</div>
@@ -13540,7 +13540,7 @@ por lo tanto la gráfica de ésta desigualdad es:</p>
 </div>
 </div>
 
-</div></div><div class="fragment">
+</div></section></section><section><section>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[20]:</div>
@@ -13588,14 +13588,21 @@ por lo tanto la gráfica de ésta desigualdad es:</p>
 </div>
 </div>
 
-</div></div></section></section><section><section>
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="&#191;C&#243;mo-se-eval&#250;an-funciones-de-dos-variables?">&#191;C&#243;mo se eval&#250;an funciones de dos variables?<a class="anchor-link" href="#&#191;C&#243;mo-se-eval&#250;an-funciones-de-dos-variables?">&#182;</a></h2><p>Dado que el dominio de dichas funciones son parejas ordenadas $(x,y)$ se requiere dar el valor de ambas variables para poder determinar el valor de la función.</p>
 <h3 id="Ejemplo">Ejemplo<a class="anchor-link" href="#Ejemplo">&#182;</a></h3><p>Si $$g(x,y)=\sqrt{x^2+y^2-1}$$
 halle el valor de $g(-3,4)$.</p>
-<h4 id="Soluci&#243;n:">Soluci&#243;n:<a class="anchor-link" href="#Soluci&#243;n:">&#182;</a></h4>$$g(-3,4)=\sqrt{(-3)^2+(4)^2-1}=\sqrt{9+16-1}=\sqrt{24}.$$<h3 id="Ejercicios">Ejercicios<a class="anchor-link" href="#Ejercicios">&#182;</a></h3><ol>
+<h4 id="Soluci&#243;n:">Soluci&#243;n:<a class="anchor-link" href="#Soluci&#243;n:">&#182;</a></h4>$$g(-3,4)=\sqrt{(-3)^2+(4)^2-1}=\sqrt{9+16-1}=\sqrt{24}.$$
+</div>
+</div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Ejercicios">Ejercicios<a class="anchor-link" href="#Ejercicios">&#182;</a></h3><ol>
 <li>Dada la función $f(x,y)=3x^2-5xy+y^3$ halle el valor de: $f(1,2)$, $f(-1,-5)$ y $f(3,-2)$.</li>
 <li>Si $g(x,y)=e^{2x^2y-5x+2y}$ evaluar $g$ en los siguientes puntos: $(0,0)$ y $(-1,1)$.</li>
 <li>Considere $h(x,y)=ln(x^2+4x+y^2-1)$ calcule: $h(1,2)$, $h(0,-0.5)$ y $h(1/2,1/2)$.</li>
@@ -13665,7 +13672,7 @@ halle el valor de $g(-3,4)$.</p>
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>En Geogebra la visualización es mucho más amigable</p>
-<iframe src="https://www.geogebra.org/3d/byaueutg?embed" width="700" height="400" allowfullscreen style="border: 1px solid #e4e4e4;border-radius: 4px;" frameborder="0"></iframe>
+<iframe src="https://www.geogebra.org/3d/byaueutg?embed" width="800" height="600" allowfullscreen style="border: 1px solid #e4e4e4;border-radius: 4px;" frameborder="0"></iframe>
 </div>
 </div>
 </div></section></section><section><section>
@@ -13759,7 +13766,7 @@ $$f(1,-2,0)=3(1)+(-2)^3-5(1)(0)=3-8+8=-5$$</p>
 
 </div>
 </div>
-</div><div class="fragment">
+</div></section></section><section><section>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[4]:</div>
@@ -13772,7 +13779,7 @@ $$f(1,-2,0)=3(1)+(-2)^3-5(1)(0)=3-8+8=-5$$</p>
 </div>
 </div>
 
-</div></div><div class="fragment">
+</div><div class="fragment">
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[5]:</div>
@@ -13805,7 +13812,7 @@ $$-5$$
 </div>
 </div>
 
-</div></div><div class="fragment">
+</div></div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -13816,7 +13823,7 @@ donde $x,y,z$ y $w$ son las cantidades en miles de unidades de los productos $X,
 
 </div>
 </div>
-</div></div><div class="fragment">
+</div><div class="fragment">
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[6]:</div>
